# hotpatch

./: CMakeLists.txt
include/: config.h.in  hotpatch_internal.h
src/: CMakeLists.txt  exedetails.c  hotpatch.c  loader.c  main.c
test/: dlltest.c  dummy.c  ptrace.c
